Fix overflow

--- a/style.css
+++ b/style.css
@@ -125,6 +125,9 @@ body {
   font-family: var(--jakarta);
   overflow-x: hidden;
 }
+.main {
+  position: relative;
+}
 .container {
   padding-inline: 20px;
   @media (min-width: 48rem) {
